[package]
name = "process_ghosting"
version = "0.1.0"
edition = "2021"
authors = ["REInject"]
readme = "README.md"
repository = "https://github.com/0xlane/process_ghosting/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "fileapi", "errhandlingapi", "winbase", "memoryapi", "processenv", "userenv"] }
ntapi = { version = "0.4.0" }
